[package]
name = "raiilway-db-backup"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.2.4"
uuid = "1.3.1"
serde_json = "1.0.96"
serde = { version = "1.0.96", features = ["derive"] }

[dependencies.reqwest]
version = "0.11.16"
features = ["json", "blocking", "native-tls-alpn", "native-tls"]